# gr-dctk

./: CMakeLists.txt  readme.md
docs/: README.dctk
docs/doxygen/: Doxyfile.in
examples/: bpsk_rx.grc  bpsk_rx.py  bpsk_tx.grc  bpsk_tx.py  bpsk_tx_rx.grc  bpsk_tx_rx.py  frame_detection.grc  generic_rx_path.grc  rx.txt  simple_spread_system.grc  spreading.grc  tx.txt
grc/: CMakeLists.txt  dctk_despread_ccc.xml  dctk_frame_sync.xml  dctk_generic_rx_path.xml  dctk_generic_synch.xml  dctk_generic_tx_path.xml  dctk_header_tag_generator.xml  dctk_peak_detector_abs_value_fb.xml  dctk_spread_ccc.xml  dctk_stream_to_tagged_stream_cc.xml
hier_block_equivalent/: bpsk_rx.grc  bpsk_tx.grc  frame_sync.grc  generic_rx_path.grc  generic_synch.grc  generic_tx_path.grc
include/dctk/: CMakeLists.txt  api.h  despread_ccc.h  frame_sync.h  header_tag_generator.h  (+3 more)
lib/: CMakeLists.txt  despread_ccc_impl.cc  despread_ccc_impl.h  frame_sync_impl.cc  frame_sync_impl.h  header_tag_generator_impl.cc  header_tag_generator_impl.h  peak_detector_abs_value_fb_impl.cc  peak_detector_abs_value_fb_impl.h  qa_dctk.cc  qa_dctk.h  spread_ccc_impl.cc  spread_ccc_impl.h  stream_to_tagged_stream_cc_impl.cc  stream_to_tagged_stream_cc_impl.h  test_dctk.cc
python/: CMakeLists.txt  __init__.py  generic_rx_path.py  generic_synch.py  generic_tx_path.py  qa_despread_ccc.py  qa_frame_sync.py  qa_generic_rx_path.py  qa_generic_synch.py  qa_generic_tx_path.py  qa_header_tag_generator.py  qa_peak_detector_abs_value_fb.py  qa_spread_ccc.py  qa_stream_to_tagged_stream_cc.py
swig/: CMakeLists.txt  dctk_swig.i
(+2 files in other folders)
